@@ -1,7 +1,7 @@
 Package: tram
 Title: Transformation Models
-Version: 0.3-1
-Date: 2019-11-05
+Version: 0.3-2
+Date: 2019-12-02
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))
 Description: Formula-based user-interfaces to specific transformation models
